simplify the jenkinsfile